feat: add scalar for documentation api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.servlet.context-path=/api 
 server.port=8080
+
+# Document API 
+scalar.enabled=true
+scalar.path=docs
+scalar.url=http://localhost:8080/api/v3/api-docs
