--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,18 @@
       <artifactId>spring-boot-starter-validation</artifactId> 
     </dependency>
 
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.scalar.maven</groupId>
+      <artifactId>scalar</artifactId>
+      <version>0.1.0</version>
+    </dependency>
+
 	</dependencies>
 
 	<build>
