--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ server.port=8080
 scalar.enabled=true
 scalar.path=docs
 scalar.url=http://localhost:8080/api/v3/api-docs
+
+# Frontend URL for CORS
+frontend.url=${FRONTEND_URL:http://localhost:5173}
