feat: add new variables in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ scalar.url=http://localhost:8080/api/v3/api-docs
 
 # Frontend URL for CORS
 frontend.url=${FRONTEND_URL:http://localhost:5173}
+
+
+# Security
+application.security.jwt.secret-key:${JWT_SECRET_KEY}
+application.security.jwt.expiration:86400000
+application.security.jwt.refresh-token.expiration:604800000
+
